hardcode text color for dark and light theme to avoid text color being invisible in dark mode

--- a/frontend/src/views/login/Login.css
+++ b/frontend/src/views/login/Login.css
@@ -27,7 +27,7 @@
 .login-form-divider {
   position: absolute;
   width: 100vw;
-  margin-top: 440px;
+  margin-top: 495px;
 }
 
 .login-form-button {
